# graphics-labs

lab-1/: main.cpp
lab-2/: CMakeLists.txt  main.cpp
lab-3/: CMakeLists.txt  main.cpp
